# techsolve2026-tungtungsahur

./: .gitmodules  README.md  docker-compose.yml
.agents/rules/: agent-behavior.md
.agents/skills/gemini-api-dev/: SKILL.md
.github/workflows/: backend-build.yml  backend-test.yml  ci.yml
.history/be/: vercel_20260510103523.json
be/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
be/app/: config.py  main.py
be/app/models/: request.py  response.py
be/app/prompts/: scenario_prompt.py
be/app/routers/: scenarios.py
be/app/services/: llm_service.py
be/tests/: conftest.py  test_lint.py  test_models.py  test_scenarios.py
docs/: api.md  fe_concept.md  hackathon_rule.md  idea.md
proxy/: nginx.conf
